# distributed-leader-election

./: .gitconfig  .gitignore  CHANGELOG  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  copyright.md  doc-todo.md  get_deps.sh  le_config.ini  package.xml  run_pipe.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  ctest.yml  docs.yml  github-actions-test.yml  release.yml
docs/html/: agent_8cpp.html  agent_8h.html  agent_8h_source.html  annotated.html  classdemo_1_1Comms-members.html  classdemo_1_1Comms.html  classdemo_1_1GhsDemoExec-members.html  classdemo_1_1GhsDemoExec.html  classes.html  classle_1_1LocalGraph-members.html  classle_1_1LocalGraph.html  classle_1_1ghs_1_1GhsState-members.html  classle_1_1ghs_1_1GhsState.html  classle_1_1ghs_1_1Msg-members.html  classle_1_1ghs_1_1Msg.html  classseque_1_1StaticQueue-members.html  classseque_1_1StaticQueue.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f7018b35ba5bdfdee8678c87fea3d0e.html  dir_8500bdfd3b26e2c9053a9d6b880ceba8.html  dir_b5d99a7407f93f7632c2dd71fcd925ed.html  dir_bcfe42bb82a4d1b20344c1c856d16382.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.html  dir_fb2c3c8fde2ce8b70ba176dbc3549bf5.html  edge_8cpp.html  edge_8h.html  edge_8h_source.html  errno_8cpp.html  errno_8h.html  errno_8h_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  (+112 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+75 more)
docs/man/man3/: agent.cpp.3  agent.h.3  demo.3  demo_Comms.3  demo_Config.3  demo_Control.3  demo_GhsDemoExec.3  demo_Header.3  demo_WireMessage.3  edge.cpp.3  edge.h.3  errno.cpp.3  errno.h.3  ghs-demo-clireader.cpp.3  ghs-demo-comms.cpp.3  ghs-demo-comms.h.3  ghs-demo-config.h.3  ghs-demo-doctest-miniz.cpp.3  ghs-demo-doctest.cpp.3  ghs-demo-edgemetrics.cpp.3  ghs-demo-edgemetrics.h.3  ghs-demo-inireader.cpp.3  ghs-demo-msgutils-z.cpp.3  ghs-demo-msgutils.cpp.3  ghs-demo-msgutils.h.3  ghs-demo.cpp.3  ghs-demo.h.3  ghs.cpp.3  ghs.h.3  ghs_impl.hpp.3  ghs_printer.cpp.3  ghs_printer.h.3  ghs_printer_impl.hpp.3  le.3  le_LocalGraph.3  le_LocalGraph_LocalEdge.3  le_ghs.3  le_ghs_AckPartPayload.3  le_ghs_Edge.3  le_ghs_GhsState.3  (+34 more)
include/dle/: agent.h  edge.h  errno.h  ghs.h  ghs_impl.hpp  ghs_msg.h  ghs_printer.h  ghs_printer_impl.hpp  level.h  msg_printer.h  static_queue.h  static_queue_impl.hpp
include/ghs/: agent.h  edge.h  ghs.h  ghs.hpp  ghs_assert.hpp  ghs_impl.hpp  ghs_printer.h  ghs_printer.hpp  ghs_printer_impl.hpp  graph.hpp  level.h  msg.h  msg.hpp  msg_printer.h  msg_printer.hpp
include/graph/: local_graph.h
include/le/: errno.h
include/seque/: seque.hpp  seque_impl.hpp  static_queue.h  static_queue_impl.hpp
src/: Makefile  comms.hpp  ghs-score.cpp  ghs.cpp  ghs.hpp  ghs_printer.cpp  ghs_printer.hpp  graph.cpp  middle-leader.cpp  msg.cpp  msg.hpp  msg_printer.cpp  random-graph.cpp  seque.cpp  seque.hpp  seque_impl.hpp  stleader.cpp  tests.cpp
src/demo/: CMakeLists.txt  ghs-demo-clireader.cpp  ghs-demo-comms.cpp  ghs-demo-comms.h  ghs-demo-comms.hpp  ghs-demo-config.h  ghs-demo-doctest-miniz.cpp  ghs-demo-doctest.cpp  ghs-demo-edgemetrics.cpp  ghs-demo-edgemetrics.h  ghs-demo-edgemetrics.hpp  ghs-demo-inireader.cpp  ghs-demo-inireader.h  ghs-demo-msgutils-z.cpp  ghs-demo-msgutils.cpp  ghs-demo-msgutils.h  ghs-demo-msgutils.hpp  ghs-demo.cpp  ghs-demo.h
src/ghs-tests/: CMakeLists.txt  tests.cpp
src/lib/: CMakeLists.txt  agent.cpp  edge.cpp  errno.cpp  ghs.cpp  ghs_msg.cpp  graph.cpp  local_graph.cpp  msg.cpp  seque.cpp
src/libtest/: CMakeLists.txt  ghs_printer.cpp  msg_printer.cpp
src/test/: CMakeLists.txt
src/tests/: CMakeLists.txt  tests.cpp
src/tools/: CMakeLists.txt  ghs-score.cpp  middle-leader.cpp  random-graph.cpp  to-dot.cpp
test/: 10-random  3-ghs  3-mst  3-random  3-stleader  40-mst  40-stleader  40-stleader2  5-graph
