<?xml version="1.0"?>
<package format="2">
  <name>ghs</name>
  <version>0.1.0</version>
  <description>The ghs package</description>
  <maintainer email="hook@jpl.nasa.gov">Josh Vander Hook</maintainer>
  <license>Proprietary</license>
  <url type="website">https://cadregitlab.jpl.nasa.gov/cadre/cadre-autonomy-pse/leader-election</url>
  <build_depend>doctest-dev</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- The export tag contains other, unspecified, tags -->
  </export>
</package>
